# obsidian2medium

./: .gitignore  README.md  pyproject.toml
o2m/: o2m.py
src/o2m/: translator.py
src/o2m.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
